# fabric_cm/credmgr/swagger_server/response/constants.py
@@ -32,6 +32,9 @@ TOKENS_REVOKE_LIST_URL = '/tokens/revoke_list'
 TOKENS_VALIDATE_URL = '/tokens/validate'
 TOKENS_DELETE_URL = '/tokens/delete'
 TOKENS_DELETE_TOKEN_HASH_URL = '/tokens/delete/{token_hash}'
+TOKENS_CREATE_LITELLM_URL = '/tokens/create_litellm'
+TOKENS_DELETE_LITELLM_URL = '/tokens/delete_litellm/{litellm_key_id}'
+TOKENS_LITELLM_KEYS_URL = '/tokens/litellm_keys'
 
 HTTP_METHOD_GET = 'get'
 HTTP_METHOD_POST = 'post'
